--- a/src/Components/dashboard/FontStyle.css
+++ b/src/Components/dashboard/FontStyle.css
@@ -24,3 +24,20 @@
     text-align: left;
 }
 
+.style{
+    width: 1087px;
+    height: 298px;
+    top: 149px;
+    left: 303px
+
+}
+
+.btn{
+    width: 100px;
+height: 50px;
+top: 387px;
+left: 338px;
+border-radius: 25px;
+
+}
+
